--- a/templates/include/menus_home.html.twig
+++ b/templates/include/menus_home.html.twig
@@ -1,9 +1,12 @@
-{% set nav = ['home','about','login'] %}
+{%  if is_granted('ROLE_ADMIN') %}
+    {% set nav = ['home','logout'] %}
+{%  else %}
+    {% set nav = ['home','about','login'] %}
+{%  endif %}
 <ul class="navbar-nav mr-auto">
 {%  for item in nav %}
     {% if item == url %}{% set active = 'nav-item active' %}{%  else %}{% set active = 'nav-item' %}{% endif %}
-    {% if item == 'login' and is_granted('ROLE_USER') %}{% set href = 'logout' %}{% else %}{% set href = item %}{% endif %}
-    {% if item == 'home' %}{% set href = '/' %}{%  else %}{% set href = item %}{% endif %}
+    {% if item == 'home' %}{% set href = '/' %}{%  else %}{% set href = '/'~item %}{% endif %}
     <li class="{{ active }}">
         <a class="nav-link" href="{{ href }}">{{ item|capitalize }}</a>
     </li>
