update project repository for codingame

--- a/templates/public/practice/php/question.html.twig
+++ b/templates/public/practice/php/question.html.twig
@@ -18,7 +18,7 @@
                 </textarea>
             </p>
             <p>
-                <button id="sendmycode" type="button" class="btn btn-primary">Send my code</button>
+                <button type="submit" id="sendmycode" name="sendmycode" class="btn btn-primary">Send my code</button>
             </p>
         </div>
     </div>
