update project repository for codingame

--- a/templates/include/menus_admin.html.twig
+++ b/templates/include/menus_admin.html.twig
@@ -2,7 +2,7 @@
     <ul class="navbar-nav mr-auto">
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Admin
+            Admin entities
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             {% for entity in entities %}
