update project repository for codingame

--- a/templates/admin/form/body.html.twig
+++ b/templates/admin/form/body.html.twig
@@ -8,6 +8,9 @@
     <div class="row">
         {{form_start(form_edit)}}
         <p class="form-group">
+            {{form_row(form_edit.page)}}
+        </p>
+        <p class="form-group">
             {{form_row(form_edit.h2)}}
         </p>
         <p class="form-group">
