--- a/templates/admin/listing/body.html.twig
+++ b/templates/admin/listing/body.html.twig
@@ -13,6 +13,7 @@
         <table class="table" width="100%">
             <tbody>
                 <tr>
+                    <th>Page</th>
                     <th>H2</th>
                     <th>Paragraph</th>
                     <th></th>
@@ -20,6 +21,7 @@
                 </tr>
                 {% for row in rows %}
                 <tr id="{{ 'row'~row.id }}">
+                    <td>{{ row.page.h1 }}</td>
                     <td>{{ row.h2 }}</td>
                     <td>{{ row.paragraph }}</td>
                     <td width="50">
