update project repository for codingame

--- a/templates/admin/form/body.html.twig
+++ b/templates/admin/form/body.html.twig
@@ -5,6 +5,9 @@
 {% block title %}Admin - edit body{% endblock %}
 
 {% block body %}
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_body_listing') }}">Back to listing</a></p>
+    </div>
     <div class="row">
         {{form_start(form_edit)}}
         <p class="form-group">
@@ -23,9 +26,9 @@
         <p class="form-group">
             {{form_row(form_edit.submit)}}
         </p>
-        <p class="form-group">
-            <a href="{{ path('admin_body_listing') }}">Back to listing</a>
-        </p>
         {{form_end(form_edit)}}
+    </div>
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_body_listing') }}">Back to listing</a></p>
     </div>
 {% endblock %}
