--- a/templates/admin/form/category.html.twig
+++ b/templates/admin/form/category.html.twig
@@ -5,7 +5,10 @@
 {% block title %}Admin - edit category{% endblock %}
 
 {% block body %}
-    <div class="col-xs-12">
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_category_listing') }}">Back to listing</a></p>
+    </div>
+    <div class="row">
         {{form_start(form_edit)}}
         <p class="form-group">
             {{form_row(form_edit.title)}}
@@ -16,9 +19,9 @@
         <p class="form-group">
             {{form_row(form_edit.submit)}}
         </p>
-        <p class="form-group">
-            <a href="{{ path('admin_category_listing') }}">Back to listing</a>
-        </p>
         {{form_end(form_edit)}}
+    </div>
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_category_listing') }}">Back to listing</a></p>
     </div>
 {% endblock %}
