--- a/templates/admin/form/response.html.twig
+++ b/templates/admin/form/response.html.twig
@@ -1,26 +1,27 @@
-{# templates/admin/form/question.html.twig #}
+{# templates/admin/form/response.html.twig #}
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - edit question{% endblock %}
+{% block title %}Admin - edit response{% endblock %}
 
 {% block body %}
-    <div class="col-xs-12">
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_response_listing') }}">Back to listing</a></p>
+    </div>
+    <div class="row">
         {{form_start(form_edit)}}
-        {#
         <p class="form-group">
             {{form_row(form_edit.question.categories.title)}}
         </p>
-        #}
         <p class="form-group">
             {{form_row(form_edit.answer)}}
         </p>
         <p class="form-group">
             {{form_row(form_edit.submit)}}
         </p>
-        <p class="form-group">
-            <a href="{{ path('admin_response_listing') }}">Back to listing</a>
-        </p>
         {{form_end(form_edit)}}
+    </div>
+    <div class="row" style="display: flow-root">
+        <p><a href="{{ path('admin_response_listing') }}">Back to listing</a></p>
     </div>
 {% endblock %}
