--- a/templates/public/practice/question.html.twig
+++ b/templates/public/practice/question.html.twig
@@ -1,19 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {% set slug =  app.request.get('slug') %}
+    {% set id =  app.request.get('id') %}
+    {% set response_answer = response[0] ? response[0].answer : null %}
+    {% if question[0].title is defined %}
     <div class="row">
         <div class="col-12">
-            <h3>{{ question.title }}</h3>
-            <p>{{ question.description }}</p>            
+            <h3>{{ question[0].title }}</h3>
+            <p>{{ question[0].description }}</p>            
         </div>
     </div>
     <div class="row">
         <div class="col-12">
-            {% set question_id = question ? question.id : null %}
-            {% set response_answer = response ? response.answer : null %}
             <h5>Your code</h5>
             <p>
-                <textarea id="textarea" class="form-control" placeholder="Put your code here..." data-id="{{ question_id }}">
+                <textarea id="textarea" class="form-control" placeholder="Put your code here..." data-id="{{ id }}">
                     {{ response_answer }}
                 </textarea>
             </p>
@@ -26,10 +28,17 @@
         <div class="col-12">
             <h5>Your result</h5>
             <div id="my-result">
-                {% include 'public/practice/'~slug~'/answer-'~question.id~'.html.twig' %}
+                {% include 'public/practice/'~slug~'/answer-'~id~'.html.twig' %}
             </div>
         </div>
     </div>
+    {% else %}
+    <div class="row">
+        <div class="col-12">
+            <div class="alert alert-primary">There is no question with parameters "{{ slug }}" and "{{ id }}".</div>
+        </div>
+    </div>
+    {%  endif %}
 {% endblock %}
 
 {% block javascript %}
