--- a/templates/admin/listing/roles.html.twig
+++ b/templates/admin/listing/roles.html.twig
@@ -6,6 +6,7 @@
 
 {% block body %}
     <div class="row" style="display: flow-root">
+        <h3>Admin - listing roles</h3>
         <p><a href="{{ path('admin_roles_new') }}" class="btn btn-primary">Add role</a></p>
         <span style="float:right">{{ 'Total: '~rows|length }}</span>
     </div>
