--- a/templates/admin/listing/user.html.twig
+++ b/templates/admin/listing/user.html.twig
@@ -6,6 +6,7 @@
 
 {% block body %}
     <div class="row" style="display: flow-root">
+        <h3>Admin - listing user</h3>
         <p><a href="{{ path('admin_user_new') }}" class="btn btn-primary">Add user</a></p>
         <span style="float:right">{{ 'Total: '~rows|length }}</span>
     </div>
