--- a/templates/admin/form/page.html.twig
+++ b/templates/admin/form/page.html.twig
@@ -6,6 +6,7 @@
 
 {% block body %}
     <div class="row" style="display: flow-root">
+        <h3>Admin - edit page</h3>
         <p><a href="{{ path('admin_page_listing') }}">Back to listing</a></p>
     </div>
     <div class="row">
