--- a/templates/admin/listing/body.html.twig
+++ b/templates/admin/listing/body.html.twig
@@ -2,10 +2,11 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - listing question{% endblock %}
+{% block title %}Admin - listing body{% endblock %}
 
 {% block body %}
     <div class="row" style="display: flow-root">
+        <h3>Admin - listing body</h3>
         <p><a href="{{ path('admin_body_new') }}" class="btn btn-primary">Add body</a></p>
         <span style="float:right">{{ 'Total: '~rows|length }}</span>
     </div>
