--- a/templates/admin/listing/page.html.twig
+++ b/templates/admin/listing/page.html.twig
@@ -1,11 +1,12 @@
-{# templates/admin/listing/body.html.twig #}
+{# templates/admin/listing/page.html.twig #}
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - listing question{% endblock %}
+{% block title %}Admin - listing page{% endblock %}
 
 {% block body %}
     <div class="row" style="display: flow-root">
+        <h3>Admin - listing page</h3>
         <p><a href="{{ path('admin_page_new') }}" class="btn btn-primary">Add slug</a></p>
         <span style="float:right">{{ 'Total: '~rows|length }}</span>
     </div>
