--- a/templates/admin/form/page.html.twig
+++ b/templates/admin/form/page.html.twig
@@ -2,11 +2,11 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - edit page{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block body %}
     <div class="row" style="display: flow-root">
-        <h3>Admin - edit page</h3>
+        <h3>{{ title }}</h3>
         <p><a href="{{ path('admin_page_listing') }}">Back to listing</a></p>
     </div>
     <div class="row">
