--- a/templates/admin/listing/page.html.twig
+++ b/templates/admin/listing/page.html.twig
@@ -2,11 +2,11 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Admin - listing page{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block body %}
     <div class="row" style="display: flow-root">
-        <h3>Admin - listing page</h3>
+        <h3>{{ title }}</h3>
         <p><a href="{{ path('admin_page_new') }}" class="btn btn-primary">Add slug</a></p>
         <span style="float:right">{{ 'Total: '~rows|length }}</span>
     </div>
