--- a/templates/include/head.html.twig
+++ b/templates/include/head.html.twig
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <title>
     {% block title %}
-        {{ url~' | '~app.request.httpHost }}
+        {{ title~' | '~app.request.httpHost }}
     {% endblock %}
     </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
