--- a/templates/admin/form/response.html.twig
+++ b/templates/admin/form/response.html.twig
@@ -12,7 +12,7 @@
     <div class="row">
         {{form_start(form_edit)}}
         <p class="form-group">
-            {{form_row(form_edit.question.categories.title)}}
+            {{form_row(form_edit.question)}}
         </p>
         <p class="form-group">
             {{form_row(form_edit.answer)}}
