update project repository for codingame

--- a/templates/admin/form/response.html.twig
+++ b/templates/admin/form/response.html.twig
@@ -12,6 +12,9 @@
     <div class="row">
         {{form_start(form_edit)}}
         <p class="form-group">
+            {{form_row(form_edit.user)}}
+        </p>
+        <p class="form-group">
             {{form_row(form_edit.question)}}
         </p>
         <p class="form-group">
