--- a/templates/include/menus.html.twig
+++ b/templates/include/menus.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    {% include 'include/menus_home.html.twig' %}
-    {% include 'include/menus_question.html.twig' %}
-    {% include 'include/menus_admin.html.twig' %}
+    {% include 'include/menus/home.html.twig' %}
+    {% include 'include/menus/question.html.twig' %}
+    {% include 'include/menus/admin.html.twig' %}
 </nav>
