--- a/templates/admin/listing/body.html.twig
+++ b/templates/admin/listing/body.html.twig
@@ -5,10 +5,13 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-    <div class="row" style="display: flow-root">
-        <h3>{{ title }}</h3>
-        <p><a href="{{ path('admin_body_new') }}" class="btn btn-primary">Add body</a></p>
-        <span style="float:right">{{ 'Total: '~rows|length }}</span>
+    <div class="row">
+        <div class="col">
+            <h3>{{ title }} <span style="font-size: 14px">{{ '(total: '~rows|length~')' }}</span></h3>
+        </div>
+        <div class="col">
+            <a href="{{ path('admin_body_new') }}" class="btn btn-primary float-right">Add body</a>
+        </div>
     </div>
     <div class="row">
         <table class="table" width="100%">
@@ -21,17 +24,17 @@
                     <th></th>
                 </tr>
                 {% for row in rows %}
-                <tr id="{{ 'row'~row.id }}">
-                    <td>{{ row.page.h1 }}</td>
-                    <td>{{ row.h2 }}</td>
-                    <td>{{ row.paragraph }}</td>
-                    <td width="50">
-                        <a href="{{ path('admin_body_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
-                    </td>
-                    <td width="50">
-                        <a href="{{ path('admin_body_delete', { 'id':row.id }) }}" class="btn"><i class="fa fa-trash"></i></a>
-                    </td>
-                </tr>
+                    <tr id="{{ 'row'~row.id }}">
+                        <td>{{ row.page.h1 }}</td>
+                        <td>{{ row.h2 }}</td>
+                        <td>{{ row.paragraph }}</td>
+                        <td width="50">
+                            <a href="{{ path('admin_body_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
+                        </td>
+                        <td width="50">
+                            <a href="{{ path('admin_body_delete', { 'id':row.id }) }}" class="btn"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
