--- a/templates/admin/listing/roles.html.twig
+++ b/templates/admin/listing/roles.html.twig
@@ -5,10 +5,13 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-    <div class="row" style="display: flow-root">
-        <h3>{{ title }}</h3>
-        <p><a href="{{ path('admin_roles_new') }}" class="btn btn-primary">Add role</a></p>
-        <span style="float:right">{{ 'Total: '~rows|length }}</span>
+    <div class="row">
+        <div class="col">
+            <h3>{{ title }} <span style="font-size: 14px">{{ '(total: '~rows|length~')' }}</span></h3>
+        </div>
+        <div class="col">
+            <a href="{{ path('admin_roles_new') }}" class="btn btn-primary float-right">Add role</a>
+        </div>
     </div>
     <div class="row">
         <table class="table" width="100%">
@@ -20,16 +23,16 @@
                     <th></th>
                 </tr>
                 {% for row in rows %}
-                <tr id="{{ 'row'~row.id }}">
-                    <td>{{ row.name }}</td>
-                    <td>{{ row.label }}</td>
-                    <td width="50">
-                        <a href="{{ path('admin_roles_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
-                    </td>
-                    <td width="50">
-                        <a href="{{ path('admin_roles_delete', { 'id':row.id }) }}" class="btn"><i class="fa fa-trash"></i></a>
-                    </td>
-                </tr>
+                    <tr id="{{ 'row'~row.id }}">
+                        <td>{{ row.name }}</td>
+                        <td>{{ row.label }}</td>
+                        <td width="50">
+                            <a href="{{ path('admin_roles_edit', { 'id':row.id }) }}" class="btn"><i class="fa fa-pencil"></i></a>
+                        </td>
+                        <td width="50">
+                            <a href="{{ path('admin_roles_delete', { 'id':row.id }) }}" class="btn"><i class="fa fa-trash"></i></a>
+                        </td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
